--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <script>
     let ctx = document.getElementById('myCanvas2').getContext('2d');
     let myChart = new Chart(ctx, {});
-    let smoothness = 10;
+    let smoothnessvalue = 10;
     function startAll()
     {
-        smoothness = document.getElementById('smoothnessSelector').value;
+        smoothnessvalue = document.getElementById('smoothnessSelector').value;
         myChart.destroy();
         fetchData(drawResults);
     }
@@ -38,7 +38,7 @@
         let labelsArr = [];
         for(let i = 0; i < timings.length; i++)
         {
-            labelsArr.push(i*smoothness);
+            labelsArr.push(i*smoothnessvalue);
         }
         myChart = new Chart(ctx, {
             type: 'line',
