--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <option value="*">All</option>
     <option value="development">development</option>
 </select><br>
+<input type="text" id="targetworkflow" name="targetworkflow" value="Java CI with Maven" style="width: 30%"><br>
 <p>Smoothness:</p>
 <input type="number" id="smoothnessSelector" name="smoothnessSelector" min="1" max="20" value="10">
 <br>
